--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,5 +14,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Build with Maven
+      run: mvn clean install
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag 29101997/my-image-name:$(date +%s)
